--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
@@ -22,5 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.7.1"
   }
 }
