--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
+    "resend": "^2.0.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
