--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon index.js",
     "prod": "NODE_ENV=production nodemon index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "migrate:mysql": "dotenv -e .env.development -- npx prisma migrate dev",
+    "migrate:mysql:prod": "dotenv -e .env.production -- npx prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
